--- a/m3-d8/index.css
+++ b/m3-d8/index.css
@@ -1,25 +1,18 @@
 body {
   background-image: url("");
 }
+nav {
+  z-index: 10;
+}
 .nav-link-active {
   color: white;
 }
-#group:hover {
+#card:hover {
   transform: translateY(-20px);
-}
-#group:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   background: linear-gradient(45deg, #ffbc00, #ff0058);
-  filter: blur(30px);
 }
-#group #card:nth-child()::before #group #card:nth-child()::after {
-  background: linear-gradient(315deg, #03a9f4, #ff0058);
-}
-#group #card:nth-child()::before #group #card:nth-child()::after {
-  background: linear-gradient(315deg, #b41ad3, #c3f11c);
+button:hover {
+  color: #255784;
+  background: #2196f3;
+  box-shadow: 0 0 10px #2196f3, 0 0 40px #df960f, 0 0 80px #df960f !important;
 }
