--- a/m3-d8/index.css
+++ b/m3-d8/index.css
@@ -12,7 +12,7 @@ nav {
   background: linear-gradient(45deg, #ffbc00, #ff0058);
 }
 button:hover {
-  color: #255784;
-  background: #2196f3;
+  color: #255784 !important;
+  background: #2196f3 !important;
   box-shadow: 0 0 10px #2196f3, 0 0 40px #df960f, 0 0 80px #df960f !important;
 }
